--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html> 
-<html lang="en"> 
+<html lang="en">
     <head> 
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>Datetime superapp</title> 
-        <script src="./src/main.js" type="module"></script> 
     </head> 
     <body>
         <button class="date_calc_button">Калькулятор времени</button>
@@ -31,7 +29,7 @@
         </form>
         </div>
         <audio controls id="player" style="display: none">
-            <source id="player-src" src="./src/audio/ding.mp3">
+            <source id="player-src">
             </source>
         </audio>
     </body> 
